--- a/testbed/package.json
+++ b/testbed/package.json
@@ -10,13 +10,8 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "6.0.4",
-    "@react-navigation/drawer": "6.1.3",
-    "@react-navigation/elements": "1.0.4",
-    "@react-navigation/material-bottom-tabs": "6.0.4",
-    "@react-navigation/material-top-tabs": "6.0.2",
-    "@react-navigation/native": "6.0.2",
-    "@react-navigation/native-stack": "6.0.5",
+    "@react-navigation/core": "file:../packages/core",
+    "@react-navigation/native": "file:../packages/native",
     "@react-navigation/stack": "file:../packages/stack",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
